--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "hardhat": "^2.19.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.1"
+    "@openzeppelin/contracts": "5.0.1"
   }
 }
