--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "5.0.1",
+    "@openzeppelin/contracts": "^5.0.1",
     "fp-ts": "^2.16.10"
   }
 }
