fix: deploy to amoy issues

--- a/.env.example
+++ b/.env.example
@@ -75,9 +75,9 @@ DEPLOYMENT_CONFIRMATIONS=2
 TEST_TIMEOUT=30000
 CONTRACT_SIZER_OUTPUT=true
 
-# Alchemy Mumbai RPC (recommended for deployment)
-ALCHEMY_MUMBAI_API_KEY=YOUR_ALCHEMY_API_KEY
-# Infura Mumbai RPC (backup)
+# Alchemy Amoy RPC (recommended for deployment)
+ALCHEMY_AMOY_API_KEY=YOUR_ALCHEMY_API_KEY
+# Infura Amoy RPC (backup)
 INFURA_PROJECT_ID=YOUR_INFURA_PROJECT_ID
 
 # CoinMarketCap API (for gas price reporting in USD)
