--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "test:all": "./scripts/run-tests.sh",
     "coverage": "hardhat coverage",
     "clean": "hardhat clean",
-    "deploy:mumbai": "hardhat run scripts/deploy.js --network mumbai",
+    "deploy:amoy": "hardhat run scripts/deploy.js --network amoy",
     "deploy:local": "hardhat run scripts/deploy.js --network localhost",
-    "verify": "hardhat run scripts/verify.js --network mumbai",
+    "verify": "hardhat run scripts/verify.js --network amoy",
     "size": "hardhat size-contracts",
     "node": "hardhat node",
     "lint": "eslint . --ext .js,.ts",
@@ -31,7 +31,7 @@
     "@typescript-eslint/parser": "^8.33.0",
     "chai": "^4.3.10",
     "dotenv": "^16.3.1",
-    "eslint": "^9.27.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-node": "^11.1.0",
     "hardhat": "^2.19.0",
     "hardhat-contract-sizer": "^2.10.0",
