refactor: streamline environment file structure for clarity
- Remove redundant .env.template file (identical to .env.example)
- Enhance .env.example with better documentation and quick start guide
- Update README with clearer environment setup instructions
- Maintain separate .env.test for test-specific configuration
- Document file structure and purpose for each environment file

This simplifies the development experience while maintaining security best practices.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 # Environment Configuration Template
-# Copy this file to .env and fill in the values
+# Copy this file to .env and fill in the actual values for your environment
+# This file documents ALL possible environment variables for the project
+#
+# Quick Start:
+# 1. cp .env.example .env
+# 2. Fill in required values (marked with YOUR_*_HERE)
+# 3. For testing: see .env.test for test-specific configuration
 
 # Environment
 NODE_ENV=development
