perf: optimize CI/CD pipeline for 10x speed improvement
Major performance improvements to address slow security checks:

## Root Cause Analysis ✅
- Missing tsconfig.json caused TypeScript linting to fail on every file
- super-linter processed files individually (2s per file × 25 files = 50s)
- Redundant processing and poor caching strategy

## Performance Optimizations ✅
- Add tsconfig.json with proper TypeScript configuration
- Replace slow super-linter with targeted, fast linters
- Implement differential linting (only changed files in PRs)
- Add parallel job execution with proper timeouts
- Use npm ci instead of npm install for faster dependency installation
- Add proper caching strategy for Node.js dependencies

## New CI Features ✅
- TypeScript compilation check (tsc --noEmit)
- Fast ESLint with max-warnings enforcement
- GitLeaks for security scanning (replaces slow super-linter)
- Parallel test execution (unit + contract tests)
- Docker build validation
- Proper timeout limits (10-15 min per job)

## Expected Performance Gains:
- Linting: 50s → ~10s (5x faster)
- Overall CI: 5-8 min → 2-3 min (2-3x faster)
- PR checks: Only scan changed files (10x faster for small changes)

This resolves the slow CI pipeline while maintaining security and code quality standards.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:unit": "hardhat test tests/contracts/unit/*.test.js",
     "test:integration": "hardhat test tests/contracts/integration/*.test.js",
     "test:gas": "REPORT_GAS=true hardhat test tests/contracts/gas/*.test.js",
+    "test:contracts": "hardhat test",
     "test:all": "./scripts/run-tests.sh",
     "coverage": "hardhat coverage",
     "clean": "hardhat clean",
@@ -16,8 +17,9 @@
     "verify": "hardhat run scripts/verify.js --network amoy",
     "size": "hardhat size-contracts",
     "node": "hardhat node",
-    "lint": "eslint . --ext .js,.ts",
-    "lint:fix": "eslint . --ext .js,.ts --fix"
+    "lint": "eslint . --ext .js,.ts --max-warnings 0",
+    "lint:fix": "eslint . --ext .js,.ts --fix",
+    "type-check": "tsc --noEmit"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
