fix: resolve ESLint TypeScript parsing errors in CI
Fixes the "import and export may appear only with sourceType: module" errors:

## Root Cause ✅
- ESLint was configured for CommonJS but parsing ES modules (TypeScript files)
- Missing proper TypeScript parser configuration
- No sourceType: "module" specified for TypeScript files

## Changes Made ✅
- Updated .eslintrc.js with proper TypeScript parser configuration
- Added sourceType: "module" for all TypeScript files
- Created separate overrides for .ts and .js files with appropriate settings
- Added .eslintignore file to prevent processing ignored files
- Updated tsconfig.json with better path configuration and exclusions
- Made test files more lenient (no-unused-vars off for test files)

## Testing ✅
- Verified ESLint now parses TypeScript files correctly
- Tested on src/main.ts and src/app.module.ts - working properly
- Only shows legitimate warnings (console statements)

This should resolve the 38 parsing errors in CI while maintaining code quality checks.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,13 @@
     "emitDecoratorMetadata": true,
     "declaration": true,
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "resolveJsonModule": true,
-    "typeRoots": ["./node_modules/@types"]
+    "typeRoots": ["./node_modules/@types"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": [
     "src/**/*",
@@ -26,6 +30,8 @@
     "dist",
     "artifacts",
     "cache",
-    "coverage"
+    "coverage",
+    "**/*.config.js",
+    "hardhat.config.js"
   ]
 }
