--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "@openzeppelin/test-helpers": "^0.5.16",
     "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.10.4",
+    "@types/supertest": "^6.0.2",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^8.33.0",
     "@typescript-eslint/parser": "^8.33.0",
     "chai": "^4.3.10",
@@ -39,12 +43,34 @@
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.5",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.33.0"
   },
   "dependencies": {
+    "@nestjs/apollo": "^12.0.0",
+    "@nestjs/bull": "^10.0.0",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.0.0",
+    "@nestjs/swagger": "^7.0.0",
+    "@nestjs/typeorm": "^10.0.0",
     "@openzeppelin/contracts": "^5.0.1",
-    "fp-ts": "^2.16.10"
+    "apollo-server-express": "^3.12.0",
+    "bull": "^4.11.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "express": "^4.18.0",
+    "fp-ts": "^2.16.10",
+    "graphql": "^16.8.0",
+    "ioredis": "^5.3.0",
+    "nestjs-typeorm-paginate": "^4.0.4",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.0"
   }
 }
