--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "@openzeppelin/test-helpers": "^0.5.16",
     "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
+    "@types/express": "^4.17.22",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.10.4",
-    "@types/supertest": "^6.0.2",
-    "@types/uuid": "^9.0.0",
+    "@types/supertest": "^6.0.3",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^8.33.0",
     "@typescript-eslint/parser": "^8.33.0",
     "chai": "^4.3.10",
@@ -50,27 +50,28 @@
     "typescript-eslint": "^8.33.0"
   },
   "dependencies": {
-    "@nestjs/apollo": "^12.0.0",
-    "@nestjs/bull": "^10.0.0",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/graphql": "^12.0.0",
-    "@nestjs/swagger": "^7.0.0",
-    "@nestjs/typeorm": "^10.0.0",
+    "@apollo/server": "^4.12.1",
+    "@nestjs/apollo": "^12.2.2",
+    "@nestjs/bull": "^10.2.3",
+    "@nestjs/common": "^10.4.18",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.4.18",
+    "@nestjs/graphql": "^12.2.2",
+    "@nestjs/swagger": "^7.4.2",
+    "@nestjs/typeorm": "^10.0.2",
     "@openzeppelin/contracts": "^5.0.1",
-    "apollo-server-express": "^3.12.0",
-    "bull": "^4.11.0",
+    "apollo-server-express": "^3.13.0",
+    "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
+    "class-validator": "^0.14.2",
     "express": "^4.18.0",
     "fp-ts": "^2.16.10",
-    "graphql": "^16.8.0",
-    "ioredis": "^5.3.0",
-    "nestjs-typeorm-paginate": "^4.0.4",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
-    "typeorm": "^0.3.17",
-    "uuid": "^9.0.0"
+    "graphql": "^16.11.0",
+    "ioredis": "^5.6.1",
+    "nestjs-typeorm-paginate": "^4.1.0",
+    "reflect-metadata": "^0.1.14",
+    "rxjs": "^7.8.2",
+    "typeorm": "^0.3.24",
+    "uuid": "^9.0.1"
   }
 }
