fix: disable npm caching in CI workflows until lock file regenerated
- Temporarily comment out 'cache: npm' in all GitHub Actions workflows
- Change 'npm ci' to 'npm install' to allow lock file generation
- Update cache key from package-lock.json to package.json hash
- Affects ci.yml and test-deploy.yml workflows
- Will restore caching once package-lock.json is regenerated by CI

This resolves the 'Dependencies lock file is not found' error in CI pipeline.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,11 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
+        # Temporarily disable caching until package-lock.json is regenerated
+        # cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
-
+      run: npm install  # Use npm install to generate lock file
     - name: ESLint Check
       run: |
         # Fast ESLint run on changed files only
@@ -70,10 +70,11 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
+        # Temporarily disable caching until package-lock.json is regenerated
+        # cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      run: npm install  # Use npm install to generate lock file
 
     - name: Compile contracts
       run: npx hardhat compile
