--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -22,7 +22,8 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
+        # Temporarily disable caching until package-lock.json is regenerated
+        # cache: 'npm'
 
     - name: Cache dependencies
       uses: actions/cache@v3
@@ -30,12 +31,12 @@ jobs:
         path: |
           ~/.npm
           node_modules
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
         restore-keys: |
           ${{ runner.os }}-node-
 
     - name: Install dependencies
-      run: npm ci
+      run: npm install  # Use npm install to generate lock file
 
     - name: Compile contracts
       run: npm run compile
@@ -91,10 +92,11 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
+        # Temporarily disable caching until package-lock.json is regenerated
+        # cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      run: npm install  # Use npm install to generate lock file
 
     - name: Compile contracts
       run: npm run compile
