--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "1.0.0",
   "description": "Blockchain Ticketing Infrastructure MVP",
   "scripts": {
+    "build": "nest build",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
     "compile": "hardhat compile",
-    "test": "hardhat test",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "test:unit": "hardhat test tests/contracts/unit/*.test.js",
     "test:integration": "hardhat test tests/contracts/integration/*.test.js",
     "test:gas": "REPORT_GAS=true hardhat test tests/contracts/gas/*.test.js",
     "test:contracts": "hardhat test",
     "test:all": "./scripts/run-tests.sh",
+    "test:cov": "jest --coverage",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
     "coverage": "hardhat coverage",
     "clean": "hardhat clean",
     "deploy:amoy": "hardhat run scripts/deploy.js --network amoy",
@@ -23,6 +31,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
+    "@nestjs/cli": "^10.4.7",
+    "@nestjs/testing": "^10.4.18",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@openzeppelin/test-helpers": "^0.5.16",
@@ -45,6 +55,7 @@
     "solidity-coverage": "^0.8.5",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.33.0"
