fix: add Solidity linting configuration to resolve CI failure
**Solidity Lint Configuration:**
- Created .solhint.json with recommended Solidity linting rules
- Extended solhint:recommended with project-specific rules
- Added compiler version constraint (^0.8.0) and code quality rules

**Package Management:**
- Added solhint@5.1.0 to devDependencies to prevent npm install warnings
- Added 'lint:sol' script for local Solidity linting

**CI Pipeline Fix:**
- Resolves 'Failed to load a solhint's config file' error
- Ensures Solidity code quality checks pass in CI

**Configuration Details:**
- Max line length: 120 characters
- Enforces proper naming conventions (mixedCase, snake_case)
- Warns on visibility and best practice issues
- Prevents common security antipatterns

This completes the CI pipeline fixes - TypeScript ✅ and Solidity linting ✅

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node": "hardhat node",
     "lint": "eslint . --ext .js,.ts --max-warnings 0",
     "lint:fix": "eslint . --ext .js,.ts --fix",
+    "lint:sol": "solhint 'contracts/**/*.sol'",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@openzeppelin/test-helpers": "^0.5.16",
     "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
+    "solhint": "^5.1.0",
     "@types/express": "^4.17.22",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.10.4",
