--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,12 @@ env:
   NODE_VERSION: '20'
   PYTHON_VERSION: '3.12'
 
+# Add permissions for GitLeaks and other security tools
+permissions:
+  contents: read
+  pull-requests: read
+  security-events: write
+
 jobs:
   # Fast linting and security - runs in parallel
   lint-and-security:
@@ -52,10 +58,17 @@ jobs:
       run: npx solhint 'contracts/**/*.sol'
 
     - name: Security - GitLeaks
-      uses: gitleaks/gitleaks-action@v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }}
+      run: |
+        # Install gitleaks
+        wget -O gitleaks.tar.gz https://github.com/gitleaks/gitleaks/releases/download/v8.18.4/gitleaks_8.18.4_linux_x64.tar.gz
+        tar -xzf gitleaks.tar.gz
+        chmod +x gitleaks
+        # Run gitleaks scan
+        ./gitleaks detect --source . --verbose --no-git || (
+          echo "⚠️  GitLeaks found potential secrets. Check the output above."
+          echo "If these are false positives, add them to .gitleaksignore"
+          exit 1
+        )
 
   # Fast tests
   test:
