--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,13 +63,12 @@ jobs:
         wget -O gitleaks.tar.gz https://github.com/gitleaks/gitleaks/releases/download/v8.18.4/gitleaks_8.18.4_linux_x64.tar.gz
         tar -xzf gitleaks.tar.gz
         chmod +x gitleaks
-        # Run gitleaks scan
-        ./gitleaks detect --source . --verbose --no-git || (
+        # Run gitleaks scan with ignore file
+        ./gitleaks detect --source . --verbose --no-git --gitleaks-ignore-path .gitleaksignore || (
           echo "⚠️  GitLeaks found potential secrets. Check the output above."
           echo "If these are false positives, add them to .gitleaksignore"
           exit 1
         )
-
   # Fast tests
   test:
     name: Tests
