--- a/package.json
+++ b/package.json
@@ -34,15 +34,14 @@
     "@eslint/js": "^9.27.0",
     "@nestjs/cli": "^10.4.7",
     "@nestjs/testing": "^10.4.18",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@types/chai": "^4.3.11",
-    "@types/mocha": "^10.0.6",
-    "solhint": "^5.1.0",
     "@types/express": "^4.17.22",
     "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.10.4",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^9.0.8",
@@ -55,8 +54,9 @@
     "hardhat": "^2.19.0",
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.9",
-    "solidity-coverage": "^0.8.5",
     "jest": "^29.7.0",
+    "solhint": "^5.1.0",
+    "solidity-coverage": "^0.8.5",
     "supertest": "^6.3.4",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.1",
@@ -71,6 +71,7 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.18",
     "@nestjs/graphql": "^12.2.2",
+    "@nestjs/platform-express": "^10.4.18",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
     "@openzeppelin/contracts": "^5.0.1",
@@ -82,6 +83,7 @@
     "graphql": "^16.11.0",
     "ioredis": "^5.6.1",
     "nestjs-typeorm-paginate": "^4.1.0",
+    "pg": "^8.16.0",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.2",
     "typeorm": "^0.3.24",
