chore: exclude deployment files from version control

--- a/.gitignore
+++ b/.gitignore
@@ -46,8 +46,9 @@ gas-report.txt
 
 # Hardhat
 cache/
-deployments/localhost/
-deployments/hardhat/
+# Exclude all deployment files except README
+deployments/*
+!deployments/README.md
 
 # Docker
 .docker/
