--- a/jest.config.json
+++ b/jest.config.json
@@ -10,7 +10,7 @@
   ],
   "coverageDirectory": "./coverage",
   "testEnvironment": "node",
-  "moduleNameMapping": {
+  "moduleNameMapper": {
     "^@/(.*)$": "<rootDir>/src/$1"
   },
   "setupFilesAfterEnv": ["<rootDir>/test/jest.setup.ts"]
