--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "build": "nest build",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:local": "docker stop ticketchain-api 2>/dev/null || true && npm run start:dev",
+    "start:dev": "docker stop ticketchain-api 2>/dev/null || true && nest start --watch",
+    "start:local": "docker stop ticketchain-api 2>/dev/null || true && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "compile": "hardhat compile",
