--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^8.33.0",
     "@typescript-eslint/parser": "^8.33.0",
+    "better-sqlite3": "^11.10.0",
     "chai": "^4.3.10",
     "dotenv": "^16.3.1",
     "eslint": "^9.0.0",
