fix: add jest teardown to resolve hanging test process issues

--- a/jest.config.json
+++ b/jest.config.json
@@ -13,5 +13,7 @@
   "moduleNameMapper": {
     "^@/(.*)$": "<rootDir>/src/$1"
   },
-  "setupFilesAfterEnv": ["<rootDir>/test/jest.setup.ts"]
+  "setupFilesAfterEnv": ["<rootDir>/test/jest.setup.ts"],
+  "globalTeardown": "<rootDir>/test/jest.teardown.ts",
+  "forceExit": true
 }
