--- a/jest.config.json
+++ b/jest.config.json
@@ -15,5 +15,9 @@
   },
   "setupFilesAfterEnv": ["<rootDir>/test/jest.setup.ts"],
   "globalTeardown": "<rootDir>/test/jest.teardown.ts",
-  "forceExit": true
+  "forceExit": true,
+  "testRunner": "jest-circus/runner",
+  "verbose": false,
+  "silent": false,
+  "noStackTrace": true
 }
