--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "compile": "hardhat compile",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:unit": "hardhat test tests/contracts/unit/*.test.js",
-    "test:integration": "hardhat test tests/contracts/integration/*.test.js",
-    "test:gas": "REPORT_GAS=true hardhat test tests/contracts/gas/*.test.js",
+    "test:unit": "jest --testPathPattern='test/unit'",
+    "test:integration": "jest --testPathPattern='test/integration'",
+    "test:contracts:unit": "hardhat test tests/contracts/unit/*.test.js",
+    "test:contracts:integration": "hardhat test tests/contracts/integration/*.test.js",
+    "test:contracts:gas": "REPORT_GAS=true hardhat test tests/contracts/gas/*.test.js",
     "test:contracts": "hardhat test",
     "test:all": "./scripts/run-tests.sh",
     "test:cov": "jest --coverage",
