--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -76,15 +76,15 @@ repos:
         args: ['--baseline', '.secrets.baseline']
         exclude: package\.lock\.json
 
-  # Additional secrets detection with GitLeaks
-  - repo: https://github.com/gitleaks/gitleaks
-    rev: v8.18.2
-    hooks:
-      - id: gitleaks
-        name: GitLeaks
-        description: Detect hardcoded secrets and credentials
-        entry: gitleaks protect --verbose --redact --staged
-        pass_filenames: false
+  # Additional secrets detection with GitLeaks - Disabled due to overlap with detect-secrets
+  # - repo: https://github.com/gitleaks/gitleaks
+  #   rev: v8.18.2
+  #   hooks:
+  #     - id: gitleaks
+  #       name: GitLeaks
+  #       description: Detect hardcoded secrets and credentials
+  #       entry: gitleaks protect --verbose --redact --staged
+  #       pass_filenames: false
 
   # Credential scanner focused on test files
   - repo: local
