--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -73,8 +73,23 @@ repos:
     rev: v1.5.0
     hooks:
       - id: detect-secrets
-        args: ['--baseline', '.secrets.baseline']
-        exclude: package\.lock\.json
+        args: [
+          '--baseline', '.secrets.baseline',
+          '--no-verify',
+        ]
+        exclude: |
+          (?x)
+          ^(
+            package\.lock\.json|
+            .*\.md$|
+            .*\.example$|
+            \.env\.example|
+            \.env\.test|
+            \.env\.docker|
+            .gitleaksignore|
+            docs/security/.*|
+            Makefile
+          )$
 
   # Additional secrets detection with GitLeaks - Disabled due to overlap with detect-secrets
   # - repo: https://github.com/gitleaks/gitleaks
