fix: update gas report test and gitleaksignore to address CI failures

--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -4,6 +4,12 @@
 .secrets.baseline:generic-api-key:130
 .secrets.baseline:generic-api-key:137
 .secrets.baseline:generic-api-key:144
+.secrets.baseline:generic-api-key:139
+.secrets.baseline:generic-api-key:148
+.secrets.baseline:generic-api-key:157
+.secrets.baseline:generic-api-key:166
+.secrets.baseline:generic-api-key:173
+.secrets.baseline:generic-api-key:180
 README.md:sidekiq-secret:42
 README.md:aws-access-token:221
 README.md:aws-access-token:223
